Fixed configuration for the JMSRouting and Translation bundles

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,3 +60,8 @@ swiftmailer:
 jms_security_extra:
     secure_controllers:  true
     secure_all_services: false
+
+jms_i18n_routing:
+    default_locale: en
+    locales: [de, en]
+    strategy: prefix_except_default
