--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,6 @@
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
+
+PrototyprSystemBundle:
+    resource: "@PrototyprSystemBundle/Resources/config/routing.yml"
