Activating the sluggable and timestamptable behavior

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -50,6 +50,14 @@ doctrine:
         mappings:
             StofDoctrineExtensionsBundle: ~
 
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
+            timestampable: true
+            sluggable: true
+            loggable: true
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
