Adding the PrototyprFrontendNewsBundle to the distribution

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,12 @@
+
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
 
+PrototyprFrontendNewsBundle:
+    resource: "@PrototyprFrontendNewsBundle/Resources/config/routing.yml"
+
 PrototyprSystemBundle:
     resource: "@PrototyprSystemBundle/Resources/config/routing.yml"
+
