Switching FrontendNewsBundle to the new NewsBundle (without application bundle prefix)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,11 +1,10 @@
-
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
 
-PrototyprFrontendNewsBundle:
-    resource: "@PrototyprFrontendNewsBundle/Resources/config/routing.yml"
+PrototyprNewsBundle:
+    resource: "@PrototyprNewsBundle/Resources/config/routing.yml"
 
 PrototyprSystemBundle:
     resource: "@PrototyprSystemBundle/Resources/config/routing.yml"
