Upgrade to Symfony 2.1 RC1

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,15 +3,15 @@
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
 
-PrototyprPageBundle:
-    resource: "@PrototyprPageBundle/Resources/config/routing.yml"
-
-PrototyprHomeBundle:
-    resource: "@PrototyprHomeBundle/Resources/config/routing.yml"
-
-PrototyprNewsBundle:
-    resource: "@PrototyprNewsBundle/Resources/config/routing.yml"
-
+#PrototyprPageBundle:
+#    resource: "@PrototyprPageBundle/Resources/config/routing.yml"
+#
+#PrototyprHomeBundle:
+#    resource: "@PrototyprHomeBundle/Resources/config/routing.yml"
+#
+#PrototyprNewsBundle:
+#    resource: "@PrototyprNewsBundle/Resources/config/routing.yml"
+#
 PrototyprSystemBundle:
     resource: "@PrototyprSystemBundle/Resources/config/routing.yml"
 
