--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,18 +3,19 @@ imports:
     - { resource: security.yml }
 
 framework:
-    #esi:             ~
-    translator:      { fallback: %locale% }
-    secret:          %secret%
-    charset:         UTF-8
-    router:          { resource: "%kernel.root_dir%/config/routing.yml" }
-    form:            true
-    csrf_protection: true
-    validation:      { enable_annotations: true }
-    templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
-    session:
-        default_locale: %locale%
-        auto_start:     true
+    #esi:                 ~
+    translator:           { fallback: %locale% }
+    secret:               %secret%
+    router:
+        resource: "%kernel.root_dir%/config/routing.yml"
+        strict_requirements: %kernel.debug%
+    form:                 true
+    csrf_protection:      true
+    validation:           { enable_annotations: true }
+    templating:           { engines: ['twig'] }
+    default_locale:       %locale%
+    trust_proxy_headers:  false # Should Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
+    session:              ~
 
 # Twig Configuration
 twig:
@@ -25,13 +26,14 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
+    bundles:        [ ]
     # java: /usr/bin/java
     filters:
         cssrewrite: ~
         # closure:
-        #     jar: %kernel.root_dir%/java/compiler.jar
+        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         # yui_css:
-        #     jar: %kernel.root_dir%/java/yuicompressor-2.4.2.jar
+        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
@@ -47,16 +49,17 @@ doctrine:
     orm:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
-        mappings:
-            StofDoctrineExtensionsBundle: ~
+#        mappings:
+#            StofDoctrineExtensionsBundle: ~
 
-stof_doctrine_extensions:
-    default_locale: en_US
-    orm:
-        default:
-            timestampable: true
-            sluggable: true
-            loggable: true
+# Doctrine extensions Configuration
+#stof_doctrine_extensions:
+#    default_locale: en_US
+#    orm:
+#        default:
+#            timestampable: true
+#            sluggable: true
+#            loggable: true
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -65,10 +68,7 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
 
-jms_security_extra:
-    secure_controllers:  true
-    secure_all_services: false
-
+# i18n-routing Configuration
 jms_i18n_routing:
     default_locale: en
     locales: [en]
